--- a/style.css
+++ b/style.css
@@ -6,3 +6,99 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #2894c0;
+}
+
+.wrapper {
+  width: 450px;
+  padding: 30px;
+  background: #ffffff;
+  border-radius: 9px;
+}
+
+.wrapper .upload-box {
+  height: 225px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 2px dashed #353a47;
+  border-radius: 5px;
+}
+
+.upload-box p {
+  font-size: 1.06rem;
+  margin-top: 20px;
+}
+
+.wrapper .content {
+  margin-top: 28px;
+}
+
+.content .row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content .row .column {
+  width: calc(100% / 2 - 15px);
+}
+
+.row .column label {
+  font-size: 1.06rem;
+}
+
+.sizes .column input {
+  width: 100%;
+  height: 49px;
+  outline: none;
+  margin-top: 7px;
+  padding: 0 15px;
+  font-size: 1.06rem;
+  border-radius: 4px;
+  border: 1px solid #aaa;
+}
+
+.sizes .column input:focus {
+  padding: 0 14px;
+  border: 2px solid #2894c0;
+}
+
+.content .checkboxes {
+  margin-top: 20px;
+}
+
+.checkboxes .column {
+  display: flex;
+  align-items: center;
+}
+
+.checkboxes .column input {
+  width: 17px;
+  height: 17px;
+  margin-right: 9px;
+  accent-color: #2894c0;
+}
+
+.content .download-btn {
+  color: #fff;
+  border: none;
+  outline: none;
+  background: #2894c0;
+  width: 100%;
+  padding: 15px 0;
+  margin: 30px 0 10px;
+  font-size: 1.06rem;
+  border-radius: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.content .download-btn:hover {
+  background: #0a75a0;
+}
