--- a/style.css
+++ b/style.css
@@ -30,10 +30,23 @@ body {
   border: 2px dashed #353a47;
   border-radius: 5px;
 }
+.wrapper.active .upload-box {
+  border: none;
+}
 
 .upload-box p {
   font-size: 1.06rem;
   margin-top: 20px;
+}
+.wrapper.active .upload-box p {
+  display: none;
+}
+
+.wrapper.active .upload-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 .wrapper .content {
